syntax="proto3";

package events;
option go_package = "github.com/jonashiltl/sessions-backend/packages/events";

import "packages/grpc/party/party.proto";
import "packages/grpc/user/user.proto";

message Registered {
    string id = 1;
    string email = 2;
    string username = 3;
    string firstname = 4;
    string lastname = 5;
}

message ProfileCreated {
    user.Profile profile = 1;
}

// id must always be defined but for the rest just define the properties that got updated
message ProfileUpdated {
    user.Profile profile = 1;
}

message PartyCreated {
    party.PublicParty party = 1;
}

message PartyUpdated {
    party.PublicParty party = 1;
}

message FriendRequested {
    string user_id = 1;
    string friend_id = 2;
}

message FriendAccepted {
    string user_id = 1;
    string friend_id = 2;
}